# cdd-c

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CDD_C_C_ORM_PLAN.md  CDD_C_PLAN00.md  CDD_C_TRANSFORMER_PLAN.md  CMakeDoxyfile.in  CMakeLists.txt  COMPLIANCE.md  DECOUPLE_PLAN.md  DEVELOPING.md  DartConfiguration.tcl  Doxyfile  Doxyfile.in  GNU_TRANSFORM_EXHAUSTIVE_PLAN.md  GNU_TRANSFORM_PLAN.md  Makefile  PROGRESS.md  PUBLISH.md  PUBLISH_OUTPUT.md  README.md  SAFE_C_PLAN.md  USAGE.md  WASM.md  add_attrs.sh  add_bitwise.sh  add_casts.sh  add_deprecated.sh  add_float_casts.sh  add_generic_attr.sh  add_hex_float.sh  add_ident.sh  add_mutations.sh  add_pragmas.sh  add_printf.sh  add_va.sh  (+37 more)
c/: CMakeLists.txt  c11.y  main.c
c-orm/: .gitignore  CMakeLists.txt  vcpkg.json
c-orm/docs/: MEMORY.md  SQL_SUPPORT.md  TUTORIAL.md
c-orm/include/: c_orm_api.h  c_orm_db.h  c_orm_meta.h  c_orm_query_builder.h  c_orm_sqlite.h  c_orm_string_builder.h
c-orm/src/: c_orm_api.c  c_orm_db.c  c_orm_query_builder.c  c_orm_sqlite.c  c_orm_string_builder.c
c_cdd/: CMakeLists.txt  analysis.c  analysis.h  c2openapi_cli.c  c2openapi_cli.h  c2openapi_operation.c  c2openapi_operation.h  c2openapi_schema.c  c2openapi_schema.h  c_cdd_stdbool.h  c_cdd_utils.c  c_cdd_utils.h  c_inspector.c  c_inspector.h  c_mapping.c  cdd.cpp  cdd.h  code2schema.c  code2schema.h  codegen.c  codegen.h  codegen_build.c  codegen_client_body.c  codegen_client_body.h  codegen_client_sig.c  codegen_client_sig.h  codegen_enum.c  codegen_enum.h  codegen_json.c  codegen_json.h  codegen_make.c  codegen_sdk_tests.c  codegen_sdk_tests.h  codegen_security.c  codegen_security.h  codegen_struct.c  codegen_struct.h  codegen_types.c  codegen_types.h  codegen_url.c  (+82 more)
c_cdd/templates/: CMakeLists.txt_for_tests.cmake  lib_export.h  vcpkg.json
c_cdd/tests/: CMakeLists.txt  cdd_helpers.c  cdd_helpers.h  test_aggregator.h  test_analysis.h  test_anonymous.c  test_arrays_object.c  test_arrays_primitive.c  test_c2openapi_op.h  test_c2openapi_schema.h  test_c_cdd.c  test_c_cdd.cpp  test_c_cdd_integration.h  test_c_inspector_types.h  test_c_mapping.h  test_code2schema.h  test_codegen.h  test_codegen_build.h  test_codegen_client_body.h  test_codegen_client_sig.h  test_codegen_defaults.h  test_codegen_enum.c  test_codegen_eq.h  test_codegen_json.h  test_codegen_make.h  test_codegen_root_arrays.h  test_codegen_sdk_tests.h  test_codegen_security.h  test_codegen_struct.h  test_codegen_types.h  test_codegen_url.h  test_codegen_validation.h  test_comment.h  test_crypto.h  test_cst_parser.h  test_dataclasses.h  test_declarator_parser.h  test_doc_parser.h  test_flexible_array.h  test_fs.h  (+44 more)
c_cdd_other/: CMakeLists.txt  c_cdd_utils.h  cst.c  cst_parser_helpers.h  schema_codegen.c
c_cdd_other/tests/: CMakeLists.txt  test_c_cdd.c  test_function.h  test_literal_str.h  test_parsing.h  test_struct.h
src/: CMakeLists.txt  Makefile  bin_cdd.c  cdd_api.c  cdd_api.h  gen_additional_op_models.c  gen_additional_op_models.h  gen_client_default_url_models.c  gen_client_default_url_models.h  gen_client_default_url_none_models.c  gen_client_default_url_none_models.h  gen_client_octet_req_models.c  gen_client_octet_req_models.h  gen_client_octet_resp_models.c  gen_client_octet_resp_models.h  gen_client_op_server_models.c  gen_client_op_server_models.h  gen_client_test_models.c  gen_client_test_models.h  gen_client_text_plain_req_models.c  gen_client_text_plain_req_models.h  gen_def.c  gen_def.h  gen_def_models.c  gen_def_models.h  gen_group_ns_test.c  gen_group_ns_test_models.c  gen_group_ns_test_models.h  gen_ns_only_test.c  gen_ns_only_test_models.c  gen_ns_only_test_models.h  gen_op_params.c  gen_op_params_models.c  gen_op_params_models.h  gen_path_override.c  gen_path_override_models.c  gen_path_override_models.h  gen_path_params.c  gen_path_params_models.c  gen_path_params_models.h  (+7 more)
src/classes/: emit_enum.c  emit_json.c  emit_json.h  emit_schema.c  emit_schema.h  emit_schema_codegen.c  emit_struct.c  emit_struct.h  emit_types.c  emit_types.h  parse_code2schema.c  parse_code2schema.h  parse_initializer.c  parse_initializer.h  parse_inspector.c  parse_inspector.h  parse_mapping.c  parse_mapping.h  parse_numeric.c
src/docstrings/: parse_doc.c
src/functions/: emit_build.c  emit_build_system.c  emit_client_body.c  emit_client_body.h  emit_client_sig.c  emit_client_sig.h  emit_codegen.c  emit_codegen.h  emit_make.c  emit_patcher.c  emit_patcher.h  emit_rewriter_body.c  emit_rewriter_body.h  emit_rewriter_sig.c  emit_rewriter_sig.h  emit_sync.c  parse_analysis.c  parse_analysis.h  parse_audit.c  parse_crypto_openssl.c  parse_crypto_types.h  parse_crypto_wincrypt.c  parse_cst.c  parse_cst.h  parse_declarator.c  parse_declarator.h  parse_fs.c  parse_http_curl.c  parse_http_curl.h  parse_http_types.c  parse_http_winhttp.c  parse_http_winhttp.h  parse_http_wininet.c  parse_http_wininet.h  parse_main.c  parse_orchestrator.c  parse_orchestrator.h  parse_preprocessor.c  parse_preprocessor.h  parse_refactor.c  (+8 more)
src/mocks/: CMakeLists.txt  c_cdd_stdbool.h  main.c  petstore.openapi.json  test_mocks.h
src/openapi/: emit_openapi.c  emit_openapi.h  parse_openapi.c  parse_openapi.h
src/routes/: emit_aggregator.c  emit_aggregator.h  emit_client_gen.c  emit_client_gen.h  emit_openapi.c  emit_openapi.h  emit_operation.c  emit_operation.h  emit_security.c  emit_security.h  emit_url.c  emit_url.h  parse_cli.c  parse_cli.h  parse_openapi.c  parse_openapi.h  parse_sync.c  parse_sync.h  parse_url.c
src/tests/: CMakeLists.txt  Makefile  emit_schema2tests.c  emit_sdk_tests.c  emit_sdk_tests.h  test_aggregator.h  test_analysis.h  test_c2openapi_schema.h  test_c_cdd.c  test_c_mapping.h  test_cdd_api.h  test_code2schema.h  test_codegen_build.h  test_codegen_client_body.h  test_codegen_client_sig.h  test_codegen_enum.c  test_codegen_make.h  test_codegen_root_arrays.h  test_codegen_url.h  test_codegen_validation.h  test_flexible_array.h  test_generate_build_system.h  test_generated_client_server.c  test_http_winhttp.h  (+19 more)
(+660 files in other folders)
